--- a/B-E/src/main/resources/application.properties
+++ b/B-E/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.jpa.show-sql=true
 spring.servlet.multipart.enabled: true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # spring.main.allow-circular-references=true
+
+
+
+spring.mail.host=smtp.yourmailserver.com
+spring.mail.port=587
+spring.mail.username=mathanraj7200@gmail.com
+spring.mail.password=Mathanraj7200@9514256024
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
