--- a/B-E/src/main/resources/application.properties
+++ b/B-E/src/main/resources/application.properties
@@ -13,9 +13,24 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 
 
-spring.mail.host=smtp.yourmailserver.com
+
+
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=mathanraj7200@gmail.com
-spring.mail.password=Mathanraj7200@9514256024
+spring.mail.password=dxvx goud vngk kzpj
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+spring.mail.properties.mail.debug=true
+logging.level.org.springframework.mail=DEBUG
+logging.level.jakarta.mail=DEBUG
+
+# spring.mail.password=Mathanraj7200@9514256024
+
+
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+spring.mail.properties.mail.smtp.pool=true
