--- a/F-E/package.json
+++ b/F-E/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "file-saver": "^2.0.5",
+    "jspdf": "^3.0.3",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -20,6 +22,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
+    "recharts": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
